WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146625
[WK2] Current page's scroll position is lost when transferring sessionState from one view to another
https://bugs.webkit.org/show_bug.cgi?id=146625
Summary
[WK2] Current page's scroll position is lost when transferring sessionState f...
Chris Dumez
Reported
2015-07-05 19:56:36 PDT
Current page's scroll position is lost when transferring sessionState from one view to another. This is because we only update the current WebBackForwardListItem after navigating away. However, when the client swaps WebViews for navigating, we don't detect this as navigating away and the current WebBackForwardListItem is not updated with the current page's state (including the scroll position). This means that the information is not transferred via the sessionState and the scroll position (among other things) ends up being lost when navigating back in the new WebView.
Attachments
Patch
(6.52 KB, patch)
2015-07-05 20:10 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-07-05 19:57:05 PDT
rdar://problem/21585268
Chris Dumez
Comment 2
2015-07-05 20:10:08 PDT
Created
attachment 256186
[details]
Patch
WebKit Commit Bot
Comment 3
2015-07-05 20:11:41 PDT
Attachment 256186
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.cpp:300: More than one command on the same line in if [whitespace/parens] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2015-07-05 23:33:06 PDT
Comment on
attachment 256186
[details]
Patch Clearing flags on attachment: 256186 Committed
r186304
: <
http://trac.webkit.org/changeset/186304
>
WebKit Commit Bot
Comment 5
2015-07-05 23:33:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug